<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="app.com.aula01.ActivityExemploAula022">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/doa__o_de_sangue"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tela_texto_inicial"
        android:textSize="50dp"
        android:layout_marginTop="141dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_centerHorizontal="true" />

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_below="@id/textView6"
        android:layout_marginTop="10dp"></View>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/view1"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:layout_centerVertical="true"
        android:text="@string/tela_texto_grande"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="135dp"
        app:srcCompat="@drawable/doar_sangue"
        android:scaleType="centerCrop"
        android:layout_marginRight="17dp"
        android:layout_marginEnd="17dp"
        android:layout_below="@+id/textView7"
        android:layout_toLeftOf="@+id/textView6"
        android:layout_toStartOf="@+id/textView6"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_toEndOf="@+id/imageView2"
        android:text="@string/tela_texto_pequeno"
        android:textSize="15sp"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_alignTop="@+id/imageView2" />


</RelativeLayout>
